--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,9 @@ spring:
     url: jdbc:mysql://localhost:3306/BoardDB?serverTimezone=UTC&characterEncoding=UTF-8
     username: user
     password: user1234
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 server:
   port: 8080
